--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "discord-interactions": "^3.2.0",
     "next": "12.2.5",
+    "raw-body": "^2.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
