--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "register": "node -r register.js"
   },
   "dependencies": {
+    "@prisma/client": "^4.2.1",
     "axios": "^0.27.2",
     "discord-interactions": "^3.2.0",
     "email-validator": "^2.0.4",
     "next": "12.2.5",
-    "prisma": "^4.2.1",
     "raw-body": "^2.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -25,6 +25,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "prisma": "^4.2.1",
     "typescript": "4.7.4"
   }
 }
