--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/client": "^4.2.1",
     "axios": "^0.27.2",
+    "bad-words": "^3.0.4",
     "discord-interactions": "^3.2.0",
     "email-validator": "^2.0.4",
     "next": "12.2.5",
