--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "bad-words": "^3.0.4",
     "discord-interactions": "^3.2.0",
+    "discord.js": "^14.2.0",
     "email-validator": "^2.0.4",
     "next": "12.2.5",
     "raw-body": "^2.5.1",
