--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "@types/nodemailer": "^6.4.5",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "postcss": "^8.4.16",
     "prisma": "^4.2.1",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
 }
