--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && npm run register",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --ignore-path .gitignore --list-different --write --plugin-search-dir=. .",
