--- a/package.json
+++ b/package.json
@@ -24,14 +24,12 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@discordjs/rest": "^1.1.0",
     "@types/bad-words": "^3.0.1",
     "@types/node": "18.7.3",
     "@types/nodemailer": "^6.4.5",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.8",
-    "c8": "^7.12.0",
     "dotenv": "^16.0.1",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
@@ -39,7 +37,6 @@
     "prettier": "^2.7.1",
     "prisma": "^4.2.1",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.7.4",
-    "vitest": "^0.22.1"
+    "typescript": "4.7.4"
   }
 }
