too lazy to figure out how to properly do this, we pinging hourly now

--- a/.github/workflows/ping-database.yml
+++ b/.github/workflows/ping-database.yml
@@ -1,4 +1,4 @@
-name: Ping the database every 24 hours to prevent it from sleeping
+name: Ping the database every hour to prevent it from sleeping
 
 on:
   schedule:
